--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -10,6 +10,7 @@
      (defconst my:d:nextcloud (expand-file-name "Nextcloud" (getenv "HOME")))
      (defconst my:d:gtd (expand-file-name "gtd" my:d:nextcloud))
      (defconst my:d:org-roam (expand-file-name "org-roam" my:d:nextcloud))
+     (defconst my:d:password-store (expand-file-name "password-store" my:d:nextcloud))
    #+end_src
 ** leaf
    #+begin_src emacs-lisp
@@ -51,7 +52,7 @@
        :custom `((custom-file . ,(locate-user-emacs-file "custom.el"))))
    #+end_src
 
-* buildin confing
+* buildin config
 ** customization propeties of buildins
    #+begin_src emacs-lisp
      (leaf cus-start
@@ -238,6 +239,19 @@
        :config (add-to-list 'default-frame-alist '(font . "Cica-18")))
    #+end_src
 
+* authentication
+  #+begin_src emacs-lisp
+    (leaf *authentication
+      :if (file-directory-p my:d:password-store)
+      :init
+      (setq leaf-default-plstore (plstore-open (expand-file-name "plstore.plist" my:d:password-store)))
+      (leaf plstore
+        :custom
+        :init
+        (setq epa-pinentry-mode 'loopback)
+        )
+      )
+  #+end_src
 * minor-mode
 ** tab-bar-mode
    #+begin_src emacs-lisp
