--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -166,18 +166,23 @@
    #+end_src
 
 * color-theme
+** doracula-theme
+   #+begin_src emacs-lisp :tangle yes
+     (leaf dracula-theme
+       ensure t)
+   #+end_src
 ** modus-theme
    #+begin_src emacs-lisp
-     (leaf *modus-themes
-       :custom
-       ((modus-themes-italic-constructs . t)
-        (modus-themes-bold-constructs   . t)
-        (modus-themes-region            . '(bg-only no-extend))
-        (modus-themes-syntax            . '(faint))
-        (modus-themes-diffs             . 'deuteranopia)
-        )
-       :config
-       (load-theme 'modus-vivendi))
+     ;; (leaf *modus-themes
+     ;;   :custom
+     ;;   ((modus-themes-italic-constructs . t)
+     ;;    (modus-themes-bold-constructs   . t)
+     ;;    (modus-themes-region            . '(bg-only no-extend))
+     ;;    (modus-themes-syntax            . '(faint))
+     ;;    (modus-themes-diffs             . 'deuteranopia)
+     ;;    )
+     ;;   :config
+     ;;   (load-theme 'modus-vivendi))
    #+end_src
 * UI
 ** mac
